# yod

./: .envrc  .gitignore  .ocamlformat  .ocamlformat-ignore  README.md  dune  dune-project  dune-project.license  flake.nix  justfile  yod.opam
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  nix.yml
docs/: CONTRIBUTING.md
docs/wiki/: Adding-Yod-to-the-PATH.md  Home.md  Installation-on-NixOS.md  Running-from-source.md  The-Yod-pipeline--from-source-code-to-executable-program.md
examples/: conway.yod  grammar.yod
lib/: ast.ml  ast.mli  desugar.ml  desugar.mli  dune  lexer.ml  lexer.mli  menhir_parser.mly  parser.messages  parser.ml  parser.mli  parser_errors.ml  parser_errors.mli  reporter.ml  reporter.mli  usage_analysis.ml  usage_analysis.mli
